--- a/task-management-app/src/main/resources/templates/new-project.html
+++ b/task-management-app/src/main/resources/templates/new-project.html
@@ -9,6 +9,7 @@
   <form th:action="@{/projects}" th:object="${project}" method="post">
     <label for="name">Name</label> <input type="text" th:field="*{name}">
     <input type="submit" value="Save Project">
+    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" />
   </form>
 
 </body>
